k8s/elastic/kibana.yml
#@ load("@ytt:data", "data")
#@ domain_name = "kibana.{}".format(data.values.base_domain_name)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana
  namespace: elasticsearch-kibana
  labels:
    app: kibana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kibana
  template:
    metadata:
      labels:
        app: kibana
    spec:
      containers:
      - name: kibana
        image: docker.elastic.co/kibana/kibana:7.10.2
        resources:
          limits:
            cpu: 1000m
          requests:
            cpu: 100m
        ports:
        - containerPort: 5601
---
apiVersion: v1
kind: Service
metadata:
  name: kibana
  namespace: elasticsearch-kibana
  labels:
    app: kibana
spec:
  ports:
  - port: 5601
  selector:
    app: kibana
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana
  namespace: elasticsearch-kibana
  annotations:
    cert-manager.io/cluster-issuer: #@ data.values.cluster_issuer_name
    ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/tls-acme: "true"
spec:
  tls:
  - secretName: #@ "{}-tls".format(domain_name.replace(".", "-"))
    hosts:
    - #@ domain_name
  rules:
  - host: #@ domain_name
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kibana
            port:
              number: 5601
